...
            "state" : "translated",
            "value" : "앨범 세부 정보"
          }
        }
      }
    },
    "Albums" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alben"
...
            "state" : "translated",
            "value" : "노트 편집"
          }
        }
      }
    },
    "Elephant Plaza Route" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Elefantenplatz-Route"
...
            "state" : "translated",
            "value" : "기억함"
          }
        }
      }
    },
    "Gotanda Station East Route" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Route Ostseite Bahnhof Gotanda"
...
            "state" : "translated",
            "value" : "이미지 노트"
          }
        }
      }
    },
    "Indoor Study Route" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lernroute innen"
...
            "state" : "translated",
            "value" : "미디엄 로스트 커피 원두입니다."
          }
        }
      }
    },
    "Memory Map" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Memory-Karte"
...
            "state" : "translated",
            "value" : "앨범 세부 정보 열기"
          }
        }
      }
    },
    "Open photo" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto öffnen"
...
